[package]
name = "reinforcement_learning_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "reinforcement_learning_lib"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/experiments/main.rs"

[[bin]]
name = "run_policy"
path = "src/experiments/run_policy.rs"

[[bin]]
name = "run_manual"
path = "src/experiments/run_manual.rs"

######################### Line world ########################################

[[bin]]
name = "lw_pol_it"
path = "src/experiments/line_world/pol_it.rs"

[[bin]]
name = "lw_dynaq"
path = "src/experiments/line_world/dyna_q.rs"

[[bin]]
name = "lw_dynaqp"
path = "src/experiments/line_world/dyna_q_plus.rs"

[[bin]]
name = "lw_sarsa"
path = "src/experiments/line_world/sarsa.rs"

[[bin]]
name = "lw_exp_sarsa"
path = "src/experiments/line_world/exp_sarsa.rs"

[[bin]]
name = "lw_mc_es"
path = "src/experiments/line_world/mc_es.rs"

[[bin]]
name = "lw_mc_off"
path = "src/experiments/line_world/off_pol.rs"

[[bin]]
name = "lw_mc_on"
path = "src/experiments/line_world/on_pol.rs"


[[bin]]
name = "lw_q_learning"
path = "src/experiments/line_world/q_learning.rs"

######################### Grid world ########################################

[[bin]]
name = "gw_pol_it"
path = "src/experiments/grid_world/pol_it.rs"

[[bin]]
name = "gw_dynaq"
path = "src/experiments/grid_world/dyna_q.rs"

[[bin]]
name = "gw_dynaqp"
path = "src/experiments/grid_world/dyna_q_plus.rs"

[[bin]]
name = "gw_sarsa"
path = "src/experiments/grid_world/sarsa.rs"

[[bin]]
name = "gw_exp_sarsa"
path = "src/experiments/grid_world/exp_sarsa.rs"

[[bin]]
name = "gw_mc_es"
path = "src/experiments/grid_world/mc_es.rs"

[[bin]]
name = "gw_mc_off"
path = "src/experiments/grid_world/off_pol.rs"

[[bin]]
name = "gw_mc_on"
path = "src/experiments/grid_world/on_pol.rs"


[[bin]]
name = "gw_q_learning"
path = "src/experiments/grid_world/q_learning.rs"

######################### Monty Hall Level 1 ########################################

[[bin]]
name = "mh_pol_it"
path = "src/experiments/monty_hall_lvl1/pol_it.rs"

[[bin]]
name = "mh_dynaq"
path = "src/experiments/monty_hall_lvl1/dyna_q.rs"

[[bin]]
name = "mh_dynaqp"
path = "src/experiments/monty_hall_lvl1/dyna_q_plus.rs"

[[bin]]
name = "mh_sarsa"
path = "src/experiments/monty_hall_lvl1/sarsa.rs"

[[bin]]
name = "mh_exp_sarsa"
path = "src/experiments/monty_hall_lvl1/exp_sarsa.rs"

[[bin]]
name = "mh_mc_es"
path = "src/experiments/monty_hall_lvl1/mc_es.rs"

[[bin]]
name = "mh_mc_off"
path = "src/experiments/monty_hall_lvl1/off_pol.rs"

[[bin]]
name = "mh_mc_on"
path = "src/experiments/monty_hall_lvl1/on_pol.rs"


[[bin]]
name = "mh_q_learning"
path = "src/experiments/monty_hall_lvl1/q_learning.rs"

######################### Pierre Feuille Ciseaux ########################################

[[bin]]
name = "pfc_pol_it"
path = "src/experiments/pierre_feuille_ciseaux/pol_it.rs"

[[bin]]
name = "pfc_value_it"
path = "src/experiments/pierre_feuille_ciseaux/value_it.rs"

[[bin]]
name = "pfc_dynaq"
path = "src/experiments/pierre_feuille_ciseaux/dyna_q.rs"

[[bin]]
name = "pfc_dynaqp"
path = "src/experiments/pierre_feuille_ciseaux/dyna_q_plus.rs"

[[bin]]
name = "pfc_sarsa"
path = "src/experiments/pierre_feuille_ciseaux/sarsa.rs"

[[bin]]
name = "pfc_exp_sarsa"
path = "src/experiments/pierre_feuille_ciseaux/exp_sarsa.rs"

[[bin]]
name = "pfc_mc_es"
path = "src/experiments/pierre_feuille_ciseaux/mc_es.rs"

[[bin]]
name = "pfc_mc_off"
path = "src/experiments/pierre_feuille_ciseaux/off_pol.rs"

[[bin]]
name = "pfc_mc_on"
path = "src/experiments/pierre_feuille_ciseaux/on_pol.rs"


[[bin]]
name = "pfc_q_learning"
path = "src/experiments/pierre_feuille_ciseaux/q_learning.rs"

######################### Secret env 0 ########################################

[[bin]]
name = "secret_env_0_dynaq"
path = "src/experiments/secret_env_0/dyna_q.rs"

[[bin]]
name = "secret_env_0_dynaqp"
path = "src/experiments/secret_env_0/dyna_q_plus.rs"

[[bin]]
name = "secret_env_0_sarsa"
path = "src/experiments/secret_env_0/sarsa.rs"

[[bin]]
name = "secret_env_0_exp_sarsa"
path = "src/experiments/secret_env_0/exp_sarsa.rs"

[[bin]]
name = "secret_env_0_mc_es"
path = "src/experiments/secret_env_0/mc_es.rs"

[[bin]]
name = "secret_env_0_mc_off"
path = "src/experiments/secret_env_0/off_pol.rs"

[[bin]]
name = "secret_env_0_mc_on"
path = "src/experiments/secret_env_0/on_pol.rs"

[[bin]]
name = "secret_env_0_pol_it"
path = "src/experiments/secret_env_0/pol_it.rs"

[[bin]]
name = "secret_env_0_q_learning"
path = "src/experiments/secret_env_0/q_learning.rs"

[[bin]]
name = "secret_env_0_value_it"
path = "src/experiments/secret_env_0/value_it.rs"


######################### Secret env 1 ########################################
[[bin]]
name = "secret_env_1_dynaq"
path = "src/experiments/secret_env_1/dyna_q.rs"

[[bin]]
name = "secret_env_1_dynaqp"
path = "src/experiments/secret_env_1/dyna_q_plus.rs"

[[bin]]
name = "secret_env_1_sarsa"
path = "src/experiments/secret_env_1/sarsa.rs"

[[bin]]
name = "secret_env_1_exp_sarsa"
path = "src/experiments/secret_env_1/exp_sarsa.rs"

[[bin]]
name = "secret_env_1_mc_es"
path = "src/experiments/secret_env_1/mc_es.rs"

[[bin]]
name = "secret_env_1_mc_off"
path = "src/experiments/secret_env_1/off_pol.rs"

[[bin]]
name = "secret_env_1_mc_on"
path = "src/experiments/secret_env_1/on_pol.rs"

[[bin]]
name = "secret_env_1_pol_it"
path = "src/experiments/secret_env_1/pol_it.rs"

[[bin]]
name = "secret_env_1_q_learning"
path = "src/experiments/secret_env_1/q_learning.rs"

[[bin]]
name = "secret_env_1_value_it"
path = "src/experiments/secret_env_1/value_it.rs"


######################### Secret env 2 ########################################
[[bin]]
name = "secret_env_2_dynaq"
path = "src/experiments/secret_env_2/dyna_q.rs"

[[bin]]
name = "secret_env_2_dynaqp"
path = "src/experiments/secret_env_2/dyna_q_plus.rs"

[[bin]]
name = "secret_env_2_sarsa"
path = "src/experiments/secret_env_2/sarsa.rs"

[[bin]]
name = "secret_env_2_exp_sarsa"
path = "src/experiments/secret_env_2/exp_sarsa.rs"

[[bin]]
name = "secret_env_2_mc_es"
path = "src/experiments/secret_env_2/mc_es.rs"

[[bin]]
name = "secret_env_2_mc_off"
path = "src/experiments/secret_env_2/off_pol.rs"

[[bin]]
name = "secret_env_2_mc_on"
path = "src/experiments/secret_env_2/on_pol.rs"

[[bin]]
name = "secret_env_2_pol_it"
path = "src/experiments/secret_env_2/pol_it.rs"

[[bin]]
name = "secret_env_2_q_learning"
path = "src/experiments/secret_env_2/q_learning.rs"

[[bin]]
name = "secret_env_2_value_it"
path = "src/experiments/secret_env_2/value_it.rs"


[dependencies]
rand = "0.9.1"
libloading = "0.8.8"
serde_json = "1.0.141"
serde = { version = "1.0.219", features = ["derive"] }
indicatif = "0.18.0"

[dev-dependencies]
reinforcement_learning_lib = {path = "."}
